# MinLatencyWSN

./: CMakeLists.txt  README.md
MinLat_solver/: CMakeLists.txt
MinLat_solver/inc/: CluTSPDivision.h  Cluster.h  Graph.h  Graph_Theory.h  HoverLocation.h  LKH_TSP_Solver.h  Location.h  Node.h  Roots.h  SolBasicMILP.h  SolClustImp.h  SolClusters.h  SolDivideGreedy.h  SolHardMILP.h  SolNearestNeighbor.h  Solution.h  Solver.h  SolverAlgs.h  UAV_Stop.h  Utilities.h  defines.h  pNode.h
MinLat_solver/src/: Graph.cpp  Graph_Theory.cpp  HoverLocation.cpp  LKH_TSP_Solver.cpp  Location.cpp  Node.cpp  Roots.cpp  SolBasicMILP.cpp  SolClustImp.cpp  SolClusters.cpp  SolDivideGreedy.cpp  SolHardMILP.cpp  SolNearestNeighbor.cpp  Solution.cpp  Solver.cpp  SolverAlgs.cpp  UAV_Stop.cpp  Utilities.cpp  main.cpp
MinLat_solver/test/: Generate_Files.py  Plot_Results.py  run_fixed_uav  run_inc_d  run_inc_n  run_inc_v  test.txt
MinLat_solver/test/Experiment/: plot_10_2.txt  plot_10_3.txt  plot_10_4.txt  plot_10_5.txt  plot_10_6.txt  plot_10_7.txt  plot_10_9.txt  plot_15_0.txt  plot_15_1.txt  plot_15_3.txt  plot_15_4.txt  plot_15_5.txt  plot_15_7.txt  plot_15_8.txt  plot_15_9.txt  plot_20_0.txt  plot_20_4.txt  plot_20_6.txt  plot_20_7.txt  plot_20_8.txt  plot_20_9.txt  plot_25_0.txt  plot_25_1.txt  plot_25_2.txt  plot_25_3.txt  plot_30_0.txt  plot_30_2.txt  plot_30_5.txt  plot_30_8.txt  plot_35_1.txt  plot_35_3.txt  plot_35_7.txt  plot_35_8.txt  plot_40_2.txt  plot_40_4.txt  plot_40_5.txt  plot_40_7.txt  plot_40_9.txt  plot_45_1.txt  plot_45_2.txt  (+10 more)
MinLat_solver/test/Experiment1/: plot_100_0.txt  plot_100_1.txt  plot_100_10.txt  plot_100_11.txt  plot_100_12.txt  plot_100_13.txt  plot_100_14.txt  plot_100_15.txt  plot_100_16.txt  plot_100_17.txt  plot_100_18.txt  plot_100_19.txt  plot_100_2.txt  plot_100_20.txt  plot_100_21.txt  plot_100_22.txt  plot_100_23.txt  plot_100_24.txt  plot_100_3.txt  plot_100_4.txt  plot_100_5.txt  plot_100_6.txt  plot_100_7.txt  plot_100_8.txt  plot_100_9.txt  plot_110_0.txt  plot_110_1.txt  (+424 more)
(+1584 files in other folders)
